# open-router-telegram-bot

./: Cargo.toml  README.md
Open-Router-Bot/: README.md
Open-Router-Bot/src/: error.rs  main.rs  utils.rs
Open-Router-Bot/src/messages/: openrouter.rs  telegram.rs
open-router-telegram-bot/: .gitignore  Cargo.toml
open-router-telegram-bot/src/: commands.rs  error.rs  main.rs  open_router.rs  telegram_bot.rs
open-router-telegram-bot/src/messages/: bot_messages.rs  mod.rs  telegram.rs
src/: commands.rs  constants.rs  error.rs  main.rs  model.rs  open_router.rs  telegram_bot.rs
src/messages/: bot_messages.rs  openrouter.rs  telegram.rs  test.json
