[package]
name = "Open-Router-Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# For making HTTP requests
reqwest = { version = "0.12", features = ["json"] } # reqwest with JSON parsing support

# For async runtime
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
futures = "0.3" # for our async / await blocks

# For JSON serialization
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }

# For error handling
thiserror = "2.0"

# For logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# for handling .env file
dotenvy = "0.15.7"

# Command line arguments
clap = { version = "4.5", features = ["derive"] }
